# probable-disco

./: .gitignore  CMakeLists.txt  Makefile  Makefile.switch  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml
build-switch-profile/: app.d  generator.d  main_switch.d  mesher.d  voxel_fsh_dksh.s  voxel_vsh_dksh.d  voxel_vsh_dksh.s
build-switch-smoke/: camera.d  chunk.d  fox.d  switch_renderer.d  voxel_fsh_dksh.d  voxel_fsh_dksh.s  voxel_vsh_dksh.s
engine/core/: app.cpp  app.h  audio.cpp  audio.h  forest_audio.cpp  forest_audio.h  platform.h  subtitles.cpp  subtitles.h
engine/core/game/: camera.cpp  camera.h  fox.cpp  fox.h
engine/core/math/: vec3.h
engine/core/render/: mesh.h  render_types.h
engine/core/world/: chunk.h  mesher.cpp  mesher.h
engine/game/: camera.cpp  camera.h  conversation_controller.cpp  conversation_controller.h  firefly_loop.cpp  firefly_loop.h  fox.cpp  fox.h  fox_controller.cpp  fox_controller.h  owl_encounter.cpp  owl_encounter.h  rabbit_burrows.cpp  rabbit_burrows.h  squirrel_quest.cpp  squirrel_quest.h
engine/math/: mat4.h
engine/render/: bitmap_font.cpp  bitmap_font.h  gles_renderer.cpp  gles_renderer.h  lights.h  quad_batch.cpp  render_commands.h
engine/world/: art_scale.h  chunk.cpp  generator.cpp  generator.h  mesher.cpp  mesher.h  terrain_streamer.cpp  terrain_streamer.h  voxel.h
platform/switch/: main_switch.cpp  switch_renderer.cpp  switch_renderer.h
platform/switch/deko3d_legacy/: switch_renderer_deko3d.cpp  switch_renderer_deko3d.h
platform/switch/shaders/: overlay_fsh.glsl  overlay_vsh.glsl  voxel_fsh.glsl  voxel_vsh.glsl
platform/web/: main_web.cpp  shell.html  web_renderer.cpp  web_renderer.h
src/: config.js  main.js  styles.css
src/audio/: audioManager.js  orbHum.js
src/core/: controls.js  gameLoop.js  scene.js  thirdPersonCamera.js
src/graphics/: voxelCube.js  voxelMaterial.js
src/items/: charm.js
src/npc/: owl.js
src/player/: fox.js
src/render/: gles_renderer.cpp  gles_renderer.h  quad_batch.h
src/story/: storyController.js
src/world/: chunks.js  forestObjects.js  ground.js  landmarks.js  noise.js  trees.js
